WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190456
Safari crashes when attempting to share a YouTube video while in full-screen
https://bugs.webkit.org/show_bug.cgi?id=190456
Summary
Safari crashes when attempting to share a YouTube video while in full-screen
Tim Horton
Reported
2018-10-10 19:17:57 PDT
Safari crashes when attempting to share a YouTube video while in full-screen
Attachments
Patch
(4.27 KB, patch)
2018-10-10 19:18 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-10-10 19:18:12 PDT
Created
attachment 352010
[details]
Patch
Tim Horton
Comment 2
2018-10-10 19:18:14 PDT
<
rdar://problem/45130748
>
WebKit Commit Bot
Comment 3
2018-10-10 20:04:07 PDT
Comment on
attachment 352010
[details]
Patch Clearing flags on attachment: 352010 Committed
r237026
: <
https://trac.webkit.org/changeset/237026
>
WebKit Commit Bot
Comment 4
2018-10-10 20:04:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug