Safari crashes when attempting to share a YouTube video while in full-screen https://bugs.webkit.org/show_bug.cgi?id=190456 <rdar://problem/45130748>

Reviewed by Wenson Hsieh.

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/Cocoa/WKShareSheet.mm:
(-[WKShareSheet presentWithParameters:completionHandler:]):
Allow the share sheet to present centered, since we don't have enough
context to put it in a more sensible place.


Canonical link: https://commits.webkit.org/205404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237026 268f45cc-cd09-0410-ab3c-d52691b4dbfc